# typy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  input.txt  input02.txt  main.cpp
res/: input03.txt
src/: main.cpp  stream.cpp  stream.hpp  symbol.cpp  symbol.hpp
